kubernetes/apps/observability/victoria-metrics/k8s-stack/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-alertmanager
spec:
  hostnames:
    - alertmanager.${CLUSTER_DOMAIN}
  parentRefs:
    - name: tailnet
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: vmalertmanager-vm
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert-vm
spec:
  hostnames:
    - vmalert.${CLUSTER_DOMAIN}
  parentRefs:
    - name: tailnet
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: vmalert-vm
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vm-single
spec:
  hostnames:
    - victoriametrics.${CLUSTER_DOMAIN}
  parentRefs:
    - name: tailnet
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: vmsingle-vm
          port: 8428
